01/25/22 done birthday card (fix css)

--- a/src/tutorial/projects/birthday reminder/BirthdayReminder.css
+++ b/src/tutorial/projects/birthday reminder/BirthdayReminder.css
@@ -24,6 +24,7 @@ body {
     border-radius: 0.25rem;
     padding: 1.5rem 2rem;
     box-shadow: 0 5px 15px rgba(0,0,0,0.4);
+    background: rgba(240, 238, 238, 0.877);
 }
 
 .containe h3 {
@@ -52,3 +53,18 @@ h3 {
   transition: all 0.3s linear;
 }
 
+div img {
+    width: 75px;
+    height: 75px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+
+    display: flex;
+    flex-direction: column;
+}
+
+div h4 {
+    display: flex;
+    flex-direction: column;
+}
